--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,8 @@ html,body{
     height: 100%;
 }
 body{
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
     display: flex;
     flex-direction: column;
 }
@@ -28,6 +30,10 @@ ul,li{
 
 h1, h2, h3, h4, h5, h6{
     margin: 0;
+}
+
+.btn{
+    cursor: pointer;
 }
 
 
