--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -1,7 +1,8 @@
 .header {
-
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
     &__wrapper {
         display: flex;
+        padding: 3px 0 7px 0;
     }
 
     &__logo {}
@@ -16,6 +17,12 @@
         display: block;
         margin-top: 3px;
 
+    }
+    &__button{
+        &:hover{
+            background-color: $accent;
+            box-shadow: 0px 1px 5px 1px #E60F2A;
+        }
     }
 }
 .logo {
@@ -35,7 +42,14 @@
         // margin-right: 43px;
 
     }
+    &__link{
+        &:hover{
+            text-shadow: 0px 0px 0.3px rgb(0, 0, 0);
+        }
+    }
 }
 .button {
-
+    &:hover{
+        background-color: $accent;
+    }
 }
