--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -34,6 +34,13 @@ h1, h2, h3, h4, h5, h6{
 
 .btn{
     cursor: pointer;
+    color:#fff;
+    width: 155px;
+    height: 45px;
+    background: $main-color;
+    border-radius: 5px;
+    margin-top: 11px;
+    border:none;
 }
 
 
