--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -53,3 +53,17 @@
         background-color: $accent;
     }
 }
+
+.privet{
+    height: 100px;
+    display: inline-block;
+    
+    
+    p{
+        display: inline;
+    }
+
+    .privet{
+    vertical-align: middle;
+    }
+}
