--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,8 @@
 @import "base/variables";
 @import "base/mixins";
-@import "base/container";
-@import "base/swiper";
+@import "blocks/container";
+@import "blocks/swiper";
+@import "blocks/btn";
 @import "blocks/header";
 @import "blocks/hero";
 
