--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -1,4 +1,7 @@
 .header {
+    position: fixed;
+    width: 100%;
+    z-index: 30;
     box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
     &__wrapper {
         display: flex;
