--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,6 +9,7 @@
 html,body{
     box-sizing: border-box;
     height: 100%;
+    position: relative;
 }
 body{
     font-family: 'Rubik', sans-serif;
@@ -42,7 +43,6 @@ h1, h2, h3, h4, h5, h6{
 
 
 .page {
-
 	flex: 1 0 auto;
 }
 
