--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -1,15 +1,10 @@
 .hero {
-    padding-top: 142px;
+    padding-top: 90px;
  
     &__wrapper {
         display: flex;
     }
 
-    &__slider-block {
-        min-width: 550px;
-        margin-right: 112px;
-
-    }
 
     &__services {
         color: $main-color;
@@ -69,29 +64,36 @@
         box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
     }
-
-    &__swiper-bg {
-        background-image: url('../images/bg/design.png');
-        width: 516px;
-        height: 682px;
-    } 
     &__swiper-paralax-antenna {}   
     &__swiper-paralax-router {}
 }
 
-.heroswiper-container {
+.swiper-container {
 }
-.heroswiper-wrapper {
+.swiper-wrapper {
+    // display: flex;
 }
-.heroswiper-slide {
+.swiper-slide {
 }
-.heroswiper-pagination {
+._swiper-pagination {
 }
 .accent {
     color: $accent;
 }
 .btn {
 }
+
+.slider-block {
+    min-width: 550px;
+    margin-right: 112px;
+
+}
+
+.swiper-bg {
+    background-image: url('../images/bg/design.png');
+    width: 516px;
+    height: 682px;
+} 
 
 
 
