--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    padding-top: 90px;
+    padding-top: 55px;
  
     &__wrapper {
         display: flex;
@@ -8,31 +8,30 @@
 
     &__services {
         color: $main-color;
-        width: 605px;
     }
     
     &__services-title {
         font-weight: bold;
         font-size: 48px;
-        margin-bottom: 35px;
+        margin-bottom: 45px;
         text-transform: uppercase;
+        line-height: 58px;
     }
-
-    &__services-list {
-        position: relative;
-
-        margin:0 0 40px 10px;
-    }
-
     &__services-descr {
         text-transform: uppercase;
         font-size: 20px;
         width: 368px;
-        margin-bottom: 16px;
+        margin-bottom: 32px;
+    }
+
+    &__services-list {
+        position: relative;
+        font-size: 18px;
+        margin:0 0 40px 10px;
     }
 
     &__services-item {
-        margin: 0 0 10px 30px;
+        margin: 0 0 15px 30px;
 
         &::before{
             content: "";
@@ -64,36 +63,16 @@
         box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
     }
-    &__swiper-paralax-antenna {}   
-    &__swiper-paralax-router {}
 }
 
-.swiper-container {
-}
-.swiper-wrapper {
-    // display: flex;
-}
-.swiper-slide {
-}
-._swiper-pagination {
-}
+
 .accent {
     color: $accent;
 }
 .btn {
 }
 
-.slider-block {
-    min-width: 550px;
-    margin-right: 112px;
 
-}
-
-.swiper-bg {
-    background-image: url('../images/bg/design.png');
-    width: 516px;
-    height: 682px;
-} 
 
 
 
