Правки кода. Тени на кнопке

--- a/app/scss/blocks/_btn.scss
+++ b/app/scss/blocks/_btn.scss
@@ -7,11 +7,11 @@
     border-radius: 5px;
     margin-top: 11px;
     border:none;
-    transition: 0.3s all;
+    transition: 0.2s all;
     &:hover{
         // background-color: $accent;
-        box-shadow: 0px 0px 5px 0px $main-color;
-        transition: 0.3s all;
+        box-shadow: 0px 0px 5px 0px rgb(8, 1, 1);
+        transition: 0.2s all;
     }
     
 }
@@ -24,9 +24,10 @@
     text-transform: uppercase;
     background: $accent;
     margin-bottom: 65px;
+    transition: 0.2s all;
     &:hover{
         // background-color: $accent;
-        box-shadow: 0px 0px 5px 0px $accent;
-        transition: 0.3s all;
+        box-shadow: 0px 0px 5px 0px rgb(8, 1, 1);
+        transition: 0.2s all;
     }
 }
