--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,10 +1,12 @@
 @import "base/variables";
 @import "base/mixins";
 @import "blocks/container";
+@import "blocks/title";
 @import "blocks/swiper";
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/hero";
+@import "blocks/equipment";
 
 html,body{
     box-sizing: border-box;
@@ -49,8 +51,5 @@ h1, h2, h3, h4, h5, h6{
 footer{
     flex-shrink: 0
 }
-
-
-
 
 @import "base/media";
