--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -24,6 +24,8 @@
 .nav {
     
     &__list {
+        font-weight: 300;
+        color: #263238;
         min-width: 670px;
         display: flex;
         justify-content: space-around;
@@ -37,8 +39,11 @@
 
     }
     &__link{
+        transition: text-shadow .3s;
         &:hover{
-            text-shadow: 0px 0px 0.3px rgb(0, 0, 0);
+            // font-weight: normal;
+            color: $main-color;
+            text-shadow: 0px 0px 1px rgb(0, 0, 0);
         }
     }
 }
