--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @import "base/mixins";
 @import "blocks/container";
 @import "blocks/title";
+@import "blocks/tabs";
 @import "blocks/swiper";
 @import "blocks/btn";
 @import "blocks/header";
