--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -12,7 +12,7 @@
     
     &__services-title {
         font-weight: bold;
-        font-size: 48px;
+        @include adaptiv-font (48, 24, 60);
         margin-bottom: 45px;
         text-transform: uppercase;
         line-height: 58px;
@@ -20,7 +20,7 @@
     &__services-descr {
         text-transform: uppercase;
         font-size: 20px;
-        width: 368px;
+        max-width: 368px;
         margin-bottom: 32px;
     }
 
