--- a/app/scss/blocks/_btn.scss
+++ b/app/scss/blocks/_btn.scss
@@ -5,11 +5,9 @@
     background: $main-color;
     border-radius: 5px;
     margin-top: 11px;
-    transition: 0.2s all;
+    transition: box-shadow .3s;
     &:hover{
-        // background-color: $accent;
-        box-shadow: 0px 0px 5px 0px rgb(8, 1, 1);
-        transition: 0.2s all;
+        box-shadow: 0px 0px 5px 0px rgba(8, 1, 1, 0.603);
     }
     
 }
@@ -22,10 +20,8 @@
     text-transform: uppercase;
     background: $accent;
     margin-bottom: 65px;
-    transition: 0.2s all;
+    transition: box-shadow .2s;
     &:hover{
-        // background-color: $accent;
-        box-shadow: 0px 0px 5px 0px rgb(8, 1, 1);
-        transition: 0.2s all;
+        box-shadow: 0px 0px 5px 0px rgba(8, 1, 1, 0.603);
     }
 }
