--- a/app/scss/blocks/_equipment.scss
+++ b/app/scss/blocks/_equipment.scss
@@ -1,43 +1,110 @@
-.equipment{
+.equipment {
     padding: 113px 0 120px 0;
 }
-.equipment-tabs {
 
-}
-.equipment-tabs__nav{
+.equipment-tabs__nav {
     margin-top: 80px;
     display: flex;
     justify-content: center;
     background-color: $main-color;
     border-radius: 5px;
-    .active{
+
+    .active {
         background-color: #009FE3;
     }
 }
 
 .equipment-tabs__btn {
-        padding-left: 20px;
-        min-width: 16.6666%;
-        height: 95px;
-        background-color: $main-color;
-        transition: background-color .3s;
-        border-radius: 5px;
-        font-size: 18px;
-        color: #FFFFFF;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: 300;
-    }
-    
+    padding-left: 20px;
+    min-width: 16.6666%;
+    height: 95px;
+    background-color: $main-color;
+    transition: background-color .3s;
+    border-radius: 5px;
+    font-size: 18px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 300;
+}
+
 
 .equipment-tabs__content {
-    &-item{
+    &-item {
+        display: none;
+    }
+
+    .active {
+        display: block;
+    }
+}
+
+// Комплекты и оборудование. Табы внутри табов
+.equipment-tabs__inner-tabs-nav {
+    display: flex;
+    position: relative;
+
+    &:before{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 840px;
+        height: 2px;
+        background-color: rgb(189, 189, 189);
+        border-radius: 2px;
+    }
+}
+
+
+.equipment-tabs__content {
+    margin-top: 20px;
+}
+
+.equipment-tabs__content-item {
+}
+
+.equipment-tabs__inner-tabs-btn {
+    position: relative;
+    padding: 0 32px 15px 32px;
+    font-size: 18px;
+    font-weight: 100;
+    text-transform: uppercase;
+    background-color: transparent;
+
+    &:before{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        border-radius: 2px;
+    }
+
+    &:last-child {
+        padding: 0 5px 15px 32px;
+    }
+
+}
+.inner-active{
+
+    &:before{
+        background-color: rgb(0, 22, 224);
+        z-index: 1;
+    }
+}
+
+
+.equipment-tabs__inner-tabs-content {
+    &-item {
         display: none;
 
-        
+
     }
-    .active{
+
+    .active {
         display: block;
     }
 }
