--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -57,11 +57,14 @@
         justify-content: space-between;
         align-items: center;
         text-align: center;
-        padding: 25px 30px 20px 30px;
+        padding: 25px 3px 24px 3px;
         width: 185px;
         height: 140px;
         box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
+        color: black;
+        font-weight: 300;
+        font-size: 18px;
     }
 }
 
