--- a/app/scss/blocks/_swiper.scss
+++ b/app/scss/blocks/_swiper.scss
@@ -13,6 +13,7 @@
 }
 .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0 10px;
+    background-color: rgb(231, 16, 16);
 }
 
 .slider-block {
